--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,17 +1,19 @@
-FROM debian
+FROM mariadb
 
-RUN apt-get update 				&& \
-  apt-get -y install mariadb-server 		&& \
-  mkdir -p /var/lib/mysql 			&& \
-  mkdir -p /var/run/mysqld 			&& \
-  mkdir -p /var/log/mysql 			&& \
-  touch /var/run/mysqld/mysqld.sock 		&& \
-  touch /var/run/mysqld/mysqld.pid 		&& \
-  chown -R mysql:mysql /var/lib/mysql 		&& \
-  chown -R mysql:mysql /var/run/mysqld 		&& \
-  chown -R mysql:mysql /var/log/mysql 		&& \
-  chmod -R 777 /var/run/mysqld
+#FROM debian
 
-CMD ["chmod 0755 /etc/init.sh"]
-CMD ["/etc/init.sh"]
+#RUN apt-get update 				&& \
+#  apt-get -y install mariadb-server 		&& \
+#  mkdir -p /var/lib/mysql 			&& \
+#  mkdir -p /var/run/mysqld 			&& \
+#  mkdir -p /var/log/mysql 			&& \
+#  touch /var/run/mysqld/mysqld.sock 		&& \
+#  touch /var/run/mysqld/mysqld.pid 		&& \
+#  chown -R mysql:mysql /var/lib/mysql 		&& \
+#  chown -R mysql:mysql /var/run/mysqld 	&& \
+#  chown -R mysql:mysql /var/log/mysql 		&& \
+#  chmod -R 777 /var/run/mysqld
+
+#CMD ["chmod 0755 /etc/init.sh"]
+#CMD ["/etc/init.sh"]
 
