--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3'
+
 services:
-  
   httpd:
     container_name: httpd_magento2
     build:
@@ -9,25 +9,26 @@ services:
       - ./mage/magento2:/var/www/html
       - ./httpd/init.sh:/etc/init.sh
     ports:
-      - "8081:80"
-      - "8082:433"
-
+      - 8081:80
+      - 8082:443
+    links:
+      - "db:db"
   db:
     container_name: db_magento2
     build:
       context: ./db
     environment: 
       MYSQL_CLIENT: root 
-      MYSQL_PASSWORD: magento20001 
+      MYSQL_ROOT_PASSWORD: magento20001 
       MYSQL_DATABASE: magento20001 
     volumes: 
       - ./db/init.sh:/etc/init.sh
-#     - ./db/data:/var/lib/mysql
+      - ./db/data:/var/lib/mysql
     ports:
-      - "3306:3306"
-
+      - 3306:3306
   redis:
     container_name: redis_magento2
     build:
       context: ./redis
-    
+
+
