--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - 8081:80
       - 8082:443
     links:
-      - "db:db"
+      - db:db
   db:
     container_name: db_magento2
     build:
@@ -22,8 +22,8 @@ services:
       MYSQL_ROOT_PASSWORD: magento20001 
       MYSQL_DATABASE: magento20001 
     volumes: 
+#     - ./db/data:/var/lib/mysql
       - ./db/init.sh:/etc/init.sh
-      - ./db/data:/var/lib/mysql
     ports:
       - 3306:3306
   redis:
